fix condition